--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
-						<nav id="nav">
+						<h1><a href="index.html">Andrew</a></h1>
+						<!-- <nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
@@ -31,25 +31,23 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
 								</li>
 							</ul>
-						</nav>
+						</nav> -->
 					</header>
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions">
+							<h2>Andrew</h2>
+							<p>Developer<br />
+							Dank Memer<br />
+							Your Dude</p>
+							<!-- <ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
