--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Andrew's Personal Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
 	</head>
 	<body class="landing">
 
@@ -43,8 +44,8 @@
 						<div class="inner">
 							<h2>Andrew</h2>
 							<p>Developer<br />
-							Dank Memer<br />
-							Your Dude</p>
+							Adrenaline Junky<br />
+							Badminton Enthusiast</p>
 							<!-- <ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
 							</ul> -->
@@ -56,15 +57,15 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Who is this guy?</h2>
+								<p>I'm a New York based Full Stack Software Developer.<br />
+								With experience in:</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon fab fa-js-square major style2"><span class="label">JS</span></span></li>
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-diamond major style1"><span class="label">Ruby</span></span></li>
+								<li><span class="icon fa-code major style3"><span class="label">Rails</span></span></li>
 							</ul>
 						</div>
 					</section>
