minor css update

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fab fa-js-square major style2"><span class="label">JS</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fab fa-js-square style3"><span class="label">Dolor</span></span></li>
 								<li><span class="icon fa-diamond major style1"><span class="label">Ruby</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Rails</span></span></li>
+								<li><span class="icon fab fa-js-square style3"><span class="label">Rails</span></span></li>
 							</ul>
 						</div>
 					</section>
