--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<!-- <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script> -->
 	</head>
 	<body class="landing">
 
@@ -62,10 +63,10 @@
 								With experience in:</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fab fa-js-square major style2"><span class="label">JS</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-								<li><span class="icon fa-diamond major style1"><span class="label">Ruby</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Rails</span></span></li>
+								<li><span class="icon devicon-javascript-plain colored major style2"><span class="label">JS</span></span></li>
+								<li><span class="icon devicon-react-original-wordmark colored major style3"><span class="label">React</span></span></li>
+								<li><span class="icon devicon-ruby-plain-wordmark colored major style2"><span class="label">Ruby</span></span></li>
+								<li><span class="icon devicon-rails-plain-wordmark colored major style1"><span class="label">Rails</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -80,7 +81,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><a href="https://briskbnb.herokuapp.com"><img src="images/briskbnb.png" alt="" /></a></div><div class="content">
 								<h2>Tortor dolore feugiat<br />
 								elementum magna</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
