--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="content-style2">
+								<h2>My Work</h2>
+								<div class="content-border"></div>
+								<p>Projects I am working on.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="https://briskbnb.herokuapp.com"><img src="images/briskbnb.png" alt="" /></a></div><div class="content">
+							<div class="image"><a href="https://briskbnb.herokuapp.com"><img src="images/briskbnb.png" alt="" /></a></div>
+							<div class="content">
 								<h2>Tortor dolore feugiat<br />
 								elementum magna</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
