minor css edits

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
+							<div class="content-style1"></div>
 							<div class="content-style2">
 								<h2>My Work</h2>
 								<div class="content-border"></div>
-								<p>Projects I am working on.</p>
 							</div>
 						</section>
 						<section class="spotlight">
