added flabbergast img / updated project section

--- a/index.html
+++ b/index.html
@@ -81,18 +81,19 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="https://briskbnb.herokuapp.com"><img src="images/briskbnb.png" alt="" /></a></div>
+							<div class="image"><a href="https://briskbnb.herokuapp.com" target="_blank"><img src="images/briskbnb.png" alt="" /></a></div>
 							<div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Briskbnb<br />
+								Full Stack Web App</h2>
+								<p>Briskbnb is a cold climate, home rental, full-stack application, which was inspired by Airbnb.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><a href="https://playflabbergast.com" target="_blank"><img src="images/flabbergast.png" alt="" /></a></div>
+							<div class="content">
+								<h2>Flabbergast<br />
+								Pure JavaScript Word Game</h2>
+								<p>Flabbergast is a word game, played using a grid of lettered tiles, where players attempt to form words in sequences of adjacent letters.</p>
 							</div>
 						</section>
 					</section>
