Modified html/css for personal section and footer / added in fontawesome

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-		<!-- <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script> -->
+		<script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
 	</head>
 	<body class="landing">
 
@@ -79,6 +79,7 @@
 								<h2>My Work</h2>
 								<div class="content-border"></div>
 							</div>
+							<div class="content-style1"></div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><a href="https://briskbnb.herokuapp.com" target="_blank"><img src="images/briskbnb.png" alt="" /></a></div>
@@ -102,34 +103,41 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>get to know me!</h2>
+								<p>A couple fun facts<br />
+									&<br />
+								contact information.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<div>
+										<h3>Badminton Enthusiast</h3>
+										<p>I am passionate about competition!<br />
+											<br />
+											In code, sports, or any passion of mine! I am always motivated to be my best self, by those greater than myself.</p>
+									</div>
 								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<img src="images/badminton.JPG" />
 								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<img src="images/Japan.JPG" />
 								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<div>
+										<h3>Lived in Japan</h3>
+										<p>I taught public high school in Japan.<br />
+											<br />
+											I'm not afraid to take risks or step outside my comfort zone, whether in life, or when exploring new technologies!</p>
+									</div>
 								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<h3>E-mail</h3>
+									<p>andrewschumacher89@gmail.com</p>
 								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li>
+									<h3>Phone</h3>
+									<p>(614)-949-9239</p>
 								</li>
 							</ul>
 						</div>
@@ -139,12 +147,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Thanks for stopping by!</h2>
+								<p>Check out my resume!</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="documents/website-resume.pdf" target="_blank" class="button fit special">Resume</a></li>
+								<!-- <li><a href="#" class="button fit">Learn More</a></li> -->
 							</ul>
 						</div>
 					</section>
@@ -152,14 +160,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<a href="https://github.com/as228512" class="icon" target="_blank"><li class="devicon-github-plain-wordmark"></li></a>
+							<a href="https://www.linkedin.com/in/andrew-schumacher-1b3b2914a/" class="icon" target="_blank"><li class="fab fa-linkedin"></li></a>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Andrew Schumacher</li><li>Base Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
