--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 		<title>Andrew's Personal Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<!-- [if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif] -->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!-- [if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif] -->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="shortcut icon" 
+      type="image/png" 
+      href="images/favicon-32x32.png" />
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 		<script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js" integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0" crossorigin="anonymous"></script>
 	</head>
@@ -114,7 +117,7 @@
 										<h3>Badminton Enthusiast</h3>
 										<p>I am passionate about competition!<br />
 											<br />
-											In code, sports, or any passion of mine! I am always motivated to be my best self, by those greater than myself.</p>
+											In code, sports, or any passion of mine, I am constantly looking for ways to improve my skills! Others' abilities and talents inspire and drive me to become my best self.</p>
 									</div>
 								</li>
 								<li>
