--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Andrew</a></h1>
-						<!-- <nav id="nav">
+						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="#two" class="more scrolly">Projects</a></li>
+											<li><a href="#three" class="more scrolly">Get To Know Me!</a></li>
+											<li><a href="#cta" class="more scrolly">Resume & Personal Info</a></li>
 										</ul>
 									</div>
 								</li>
 							</ul>
-						</nav> -->
+						</nav>
 					</header>
 
 				<!-- Banner -->
