minor text change

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Andrew</a></h1>
+						<h1><a href="index.html">AS</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -48,7 +48,7 @@
 						<div class="inner">
 							<h2>Andrew</h2>
 							<p>Developer<br />
-							Adrenaline Junky<br />
+							Adventurer<br />
 							Badminton Enthusiast</p>
 							<!-- <ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
