added github links for projects

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 								<h2>Briskbnb<br />
 								Full Stack Web App</h2>
 								<p>Briskbnb is a cold climate, home rental, full-stack application, which was inspired by Airbnb.</p>
+								<div class="project-link-wrapper">
+									<a href="https://github.com/as228512/briskbnb" class="icon" target="_blank"><li class="devicon-github-plain-wordmark"></li></a>
+								</div>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -98,6 +101,9 @@
 								<h2>Flabbergast<br />
 								Pure JavaScript Word Game</h2>
 								<p>Flabbergast is a word game, played using a grid of lettered tiles, where players attempt to form words in sequences of adjacent letters.</p>
+								<div class="project-link-wrapper">
+									<a href="https://github.com/as228512/Flabbergast" class="icon" target="_blank"><li class="devicon-github-plain-wordmark"></li></a>
+								</div>
 							</div>
 						</section>
 					</section>
